# rbot

./: LICENSE  README.md  commands  commands.md
include/: callbacks.h  core.h  ebot.rc  engine.h  fakeping.h  platform.h  query.h  resource.h  runtime.h
project/: CMakeLists.txt  rbot.sln  rbot.vcxproj
source/: basecode.cpp  callbacks.cpp  combat.cpp  control.cpp  fakeping.cpp  globals.cpp  interface.cpp  navigate.cpp  netmsg.cpp  query.cpp  support.cpp  waypoint.cpp
